tests/gold/errors/conversion.comp
running: as -g -msyntax=intel build/conversion.asm -o build/conversion.o
